--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Kevin Towner</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <script type="text/javascript" src="assets/javascript/psychic.js">Kevin</script>
-
+  <title>The Guessing Game</title>
 </head>
 
-
-
-
-
 <body>
-	<header style="font-style: bold">The Psychic Game</header>
-	
-	<ul>
-		<li style="list-style:none">Guess what letter I am thinking of</li>
-			<br>
-		<li style="list-style:none">Wins: </li>
-			<br>
-		<li style="list-style:none">Losses: </li>
-			<br>
-		<li style="list-style:none">Guesses Left: </li>
-			<br>
-		<li style="list-style:none">Your gueses so far: </li>
-	</ul>
+    <div class="row">
+        <div class="col-md-12">
+                    <header style="font-style: bold">The Psychic Game</header>
+                    <ul>
+                        <li style="list-style:none">Guess what letter I am thinking of</li>
+                        <br>
 
+                        <li style="list-style:none">Wins:<li id="win-field" style="list-style:none"></li></li>
+                        <br>
 
+                        <li style="list-style:none">Losses:<li id="loss-field" style="list-style:none"></li></li>
+                        <br>
 
+                        <li style="list-style:none">Guesses Left:<li id="guesses-left-field" style="list-style:none"></li></li>
+                        <br>
+
+                        <li style="list-style:none">Your Guesses thus far:<li id="guessed-field" style="list-style:none"></li></li>
+                    </ul>
+            </div>
+        </div>
+    </div>
+
+<script src="assets/javascript/psychic.js" type="text/javascript"></script>
 
 </body>
 
+</html>
 
 
 
-</script>
-<html>
+
