--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>The Guessing Game</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name=“viewport” content=“width=device-width, initial-scale=1”>
+</head>
 </head>
 
 <body>
@@ -21,7 +25,7 @@
                         <li style="list-style:none">Guesses Left:<li id="guesses-left-field" style="list-style:none"></li></li>
                         <br>
 
-                        <li style="list-style:none">Your Guesses thus far:<li id="guessed-field" style="list-style:none"></li></li>
+                        <li style="list-style:none">Your Guesses so far:<li id="guessed-field" style="list-style:none"></li></li>
                     </ul>
             </div>
         </div>
