--- a/index.html
+++ b/index.html
@@ -2,41 +2,44 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <title>The Guessing Game</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <meta name=“viewport” content=“width=device-width, initial-scale=1”>
+    <meta charset="UTF-8">
+    <title>The Guessing Game</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta name=“viewport” content=“width=device-width, initial-scale=1”>
 </head>
 </head>
 
 <body>
-                    <header style="font-style: bold">The Psychic Game</header>
-                    <ul>
-                        <li style="list-style:none">Guess what letter I am thinking of</li>
-                        <br>
+  <container id="psychic-game">
 
-                        <li style="list-style:none">Wins:<li id="win-field" style="list-style:none"></li></li>
-                        <br>
-
-                        <li style="list-style:none">Losses:<li id="loss-field" style="list-style:none"></li></li>
-                        <br>
-
-                        <li style="list-style:none">Guesses Left:<li id="guesses-left-field" style="list-style:none"></li></li>
-                        <br>
-
-                        <li style="list-style:none">Your Guesses so far:<li id="guessed-field" style="list-style:none"></li></li>
-                    </ul>
-            </div>
-        </div>
+    <header>The Psychic Game</header>
+        <br>
+        <br>
+    
+        <li style="list-style:none">Guess what letter I am thinking of</li>
+        <br>
+        <li style="list-style:none">Wins:
+            <span id="win-field" style="list-style:none"></li></span>
+        </li>
+        <br>
+        <li style="list-style:none">Losses:
+            <span id="loss-field" style="list-style:none"></li></span>
+        </li>
+        <br>
+        <li style="list-style:none">Guesses Left:
+            <span id="guesses-left-field" style="list-style:none"></li></span>
+        </li>
+        <br>
+        <li style="list-style:none">Your Guesses so far:
+            <span id="guessed-field" style="list-style:none"></li></span>
+        </li>
+  
+  </container>
     </div>
-
-<script src="assets/javascript/psychic.js" type="text/javascript"></script>
-
+    </div>
+    </div>
+    <script src="assets/javascript/psychic.js" type="text/javascript"></script>
 </body>
 
 </html>
-
-
-
-
